@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.seren" version="1.6.10" name="Seren" provider-name="Nixgates">
+<addon id="plugin.video.seren" version="1.6.11" name="Seren" provider-name="Nixgates">
 	<requires>
 		<import addon="xbmc.python" version="2.25.0" />
 		<import addon="script.module.requests" version="2.19.1" />
@@ -42,6 +42,9 @@
 			<screenshot>resources/screenshots/screenshot-03.jpg</screenshot>
 		</assets>
 		<news>
+Changelog 1.6.11:
+Fix provider list not showing due to theme changes
+
 Changelog 1.6.10:
 Increased concurrent threads for Trakt Sync database to speed up large menu lists
 Fixed movie view by ID setting not displaying
